// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editable label 1`] = `
<Label
  isEditable={true}
  onClose={[MockFunction]}
  onEditCancel={[MockFunction]}
  onEditComplete={[MockFunction]}
>
  <span
    className="pf-c-label pf-m-editable"
  >
    <span
      className="pf-c-label__content"
    >
      <button
        className="pf-c-label__editable-text"
        onClick={[Function]}
      >
        Something
      </button>
    </span>
    <Button
      aria-label="Close Something"
      onClick={[MockFunction]}
      type="button"
      variant="plain"
    >
      <ButtonBase
        aria-label="Close Something"
        innerRef={null}
        onClick={[MockFunction]}
        type="button"
        variant="plain"
      >
        <button
          aria-disabled={false}
          aria-label="Close Something"
          className="pf-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          onClick={[MockFunction]}
          role={null}
          type="button"
        >
          <TimesIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </TimesIcon>
        </button>
      </ButtonBase>
    </Button>
  </span>
</Label>
`;

exports[`editable label 2`] = `
<Label
  isEditable={true}
  onClose={[MockFunction]}
  onEditCancel={[MockFunction]}
  onEditComplete={[MockFunction]}
>
  <span
    className="pf-c-label pf-m-editable pf-m-editable-active"
  >
    <input
      className="pf-c-label__editable-text"
      id="editable-input"
      onChange={[Function]}
      type="text"
      value="Something"
    />
  </span>
</Label>
`;

exports[`label 1`] = `
<span
  className="pf-c-label"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label 2`] = `
<span
  className="pf-c-label pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label 3`] = `
<span
  className="pf-c-label pf-m-compact"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with additional class name 1`] = `
<span
  className="pf-c-label klass1"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with additional class name and props 1`] = `
<span
  className="pf-c-label class-1"
  data-label-name="something"
  id="label-1"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with blue color 1`] = `
<span
  className="pf-c-label pf-m-blue"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with blue color 2`] = `
<span
  className="pf-c-label pf-m-blue pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with close button 1`] = `
<span
  className="pf-c-label"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
  <Button
    aria-label="Close Something"
    onClick={[MockFunction]}
    type="button"
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</span>
`;

exports[`label with close button 2`] = `
<span
  className="pf-c-label pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
  <Button
    aria-label="Close Something"
    onClick={[MockFunction]}
    type="button"
    variant="plain"
  >
    <TimesIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</span>
`;

exports[`label with cyan color 1`] = `
<span
  className="pf-c-label pf-m-cyan"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with cyan color 2`] = `
<span
  className="pf-c-label pf-m-cyan pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with green color 1`] = `
<span
  className="pf-c-label pf-m-green"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with green color 2`] = `
<span
  className="pf-c-label pf-m-green pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with grey color 1`] = `
<span
  className="pf-c-label"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with grey color 2`] = `
<span
  className="pf-c-label pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with href 1`] = `
<span
  className="pf-c-label"
>
  <a
    className="pf-c-label__content"
    href="#"
  >
    Something
  </a>
</span>
`;

exports[`label with href 2`] = `
<span
  className="pf-c-label pf-m-outline"
>
  <a
    className="pf-c-label__content"
    href="#"
  >
    Something
  </a>
</span>
`;

exports[`label with orange color 1`] = `
<span
  className="pf-c-label pf-m-orange"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with orange color 2`] = `
<span
  className="pf-c-label pf-m-orange pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with purple color 1`] = `
<span
  className="pf-c-label pf-m-purple"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with purple color 2`] = `
<span
  className="pf-c-label pf-m-purple pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with red color 1`] = `
<span
  className="pf-c-label pf-m-red"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with red color 2`] = `
<span
  className="pf-c-label pf-m-red pf-m-outline"
>
  <span
    className="pf-c-label__content"
  >
    Something
  </span>
</span>
`;

exports[`label with truncation 1`] = `
<span
  className="pf-c-label"
>
  <span
    className="pf-c-label__content"
  >
    <span
      className="pf-c-label__text"
    >
      Something very very very very very long that should be truncated
    </span>
  </span>
</span>
`;
